--- a/views/app.ejs
+++ b/views/app.ejs
@@ -40,7 +40,7 @@
         .shadow {
             position: absolute;
             background-color: rgba(0, 0, 0, 0.61);
-            
+            width: 100vw;
         }
 
         span {
@@ -67,7 +67,7 @@
         }
         .subnav{
             position: fixed; 
-            width: 100%;
+            width: 100vw;
             height: 70px;
             bottom: 0px;
             background-color: rgb(36, 36, 36);
