--- a/views/pesquisa.ejs
+++ b/views/pesquisa.ejs
@@ -43,6 +43,7 @@
             position: absolute;
             background-color: rgba(0, 0, 0, 0.61);
             min-height: 100vh;
+            width: 100vw;
         }
 
         span {
@@ -76,7 +77,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            
+            width: 100vw;
         }
         .btn {
             margin: 20px;
